<resources>
    <string name="app_name">달과 별 그리고 술</string>
    <string name="NetworkError">네트워크 오류가 발생했습니다.</string>
    <string name="LoginText1">하늘에 달이 밝게 떠 있고\n별이 반짝이고 있습니다.</string>
    <string name="LoginText2">이런 날 술 한잔 어때요?</string>
    <string name="LoginText3">당신의 주량은?</string>
    <string name="LoginText4">당신의 성별은?</string>

    <string name="genderM">남성</string>
    <string name="genderW">여성</string>

    <!-- FireBase User 영역 -->
    <string name="FireBaseUserKey">User</string>
    <string name="FireBaseUserInfo">info</string>

    <!-- main -->
    <string name="main_rank">랭킹</string>
    <string name="main_analysis">분석</string>
    <string name="main_gallery">갤러리</string>

    <!--rank-->
    <string name="rank_more">더보기</string>
    <string name="rank_default_filter">소주</string>
    <string name="rank_name">랭킹</string>
    <string name="rank_data_load_zero">Soju</string>
    <string name="rank_data_load_fir">Beer</string>
    <string name="rank_data_load_sec">Makgeolli</string>
    <string name="rank_data_rating">Rating</string>
    <string name="rank_data_rating_man">ManRating</string>
    <string name="rank_data_rating_woman">WomanRating</string>

    <string-array name="option">
        <item>전체</item>
        <item>소주</item>
        <item>맥주</item>
        <item>막걸리</item>
        <item>남성 선호도</item>
        <item>여성 선호도</item>
    </string-array>

    <string name="rank_radio1">아주 조금</string>
    <string name="rank_radio2">조금</string>
    <string name="rank_radio3">적당히</string>
    <string name="rank_radio4">많이</string>
    <string name="rank_degree"> 도</string>
    <string name="AnalysisRegisterNum">병</string>
    <string name="analysis">분석</string>
</resources>
